--- a/index.html
+++ b/index.html
@@ -133,6 +133,38 @@
       </section>
       <section class="prices">
         <h2>Algunos de los precios</h2>
+        <ul class="price-list">
+          <li class="price-item">
+            <h3>Title</h3>
+            <p>$00000</p>
+            <ul>
+              <li>description item</li>
+              <li>description item</li>
+              <li>description item</li>
+              <li>description item</li>
+            </ul>
+          </li>
+          <li class="price-item price-item--best">
+            <h3>Title</h3>
+            <p>$00000</p>
+            <ul>
+              <li>description item</li>
+              <li>description item</li>
+              <li>description item</li>
+              <li>description item</li>
+            </ul>
+          </li>
+          <li class="price-item">
+            <h3>Title</h3>
+            <p>$00000</p>
+            <ul>
+              <li>description item</li>
+              <li>description item</li>
+              <li>description item</li>
+              <li>description item</li>
+            </ul>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
