--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <section class="about">
-        <h2>Tu bicicletería de confianza</h2>
+        <h2 class="title-section">Tu bicicletería de confianza</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
           veritatis a deleniti quisquam deserunt, accusantium, adipisci impedit
@@ -25,7 +25,7 @@
         </p>
       </section>
       <section class="services">
-        <h2>Nuestros servicios</h2>
+        <h2 class="title-section">Nuestros servicios</h2>
         <ul class="list-services">
           <li class="service">
             <div class="img-service">
@@ -35,7 +35,7 @@
               />
             </div>
             <div class="info-service">
-              <h3>name serice</h3>
+              <h3>name service</h3>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
@@ -52,7 +52,7 @@
               />
             </div>
             <div class="info-service">
-              <h3>name serice</h3>
+              <h3>name service</h3>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
@@ -69,7 +69,7 @@
               />
             </div>
             <div class="info-service">
-              <h3>name serice</h3>
+              <h3>name service</h3>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
@@ -86,7 +86,7 @@
               />
             </div>
             <div class="info-service">
-              <h3>name serice</h3>
+              <h3>name service</h3>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
@@ -103,24 +103,7 @@
               />
             </div>
             <div class="info-service">
-              <h3>name serice</h3>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
-                enim magnam eaque dolore! Quae voluptatibus neque deleniti est
-                quibusdam, quas perspiciatis inventore nemo assumenda velit
-                delectus blanditiis provident dicta corporis!
-              </p>
-            </div>
-          </li>
-          <li class="service">
-            <div class="img-service">
-              <img
-                src="./images/desarrollo-web-albacete.png"
-                alt="img-service"
-              />
-            </div>
-            <div class="info-service">
-              <h3>name serice</h3>
+              <h3>name service</h3>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
@@ -132,7 +115,7 @@
         </ul>
       </section>
       <section class="prices">
-        <h2>Algunos de los precios</h2>
+        <h2 class="title-section">Algunos de nuestros precios</h2>
         <ul class="price-list">
           <li class="price-item">
             <h3>Title</h3>
