--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <section class="about">
         <h2 class="title-section">Tu bicicletería de confianza</h2>
-        <p>
+        <p class="paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
           veritatis a deleniti quisquam deserunt, accusantium, adipisci impedit
           ut, voluptatem similique ipsum minima aperiam ipsa eos fugit expedita!
@@ -36,12 +36,14 @@
             </div>
             <div class="info-service">
               <h3>name service</h3>
+
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
                 quibusdam, quas perspiciatis inventore nemo assumenda velit
                 delectus blanditiis provident dicta corporis!
               </p>
+              <div class="arrow"><img src="./images/arrow.svg" alt="" /></div>
             </div>
           </li>
           <li class="service">
@@ -53,12 +55,14 @@
             </div>
             <div class="info-service">
               <h3>name service</h3>
+
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
                 quibusdam, quas perspiciatis inventore nemo assumenda velit
                 delectus blanditiis provident dicta corporis!
               </p>
+              <div class="arrow"><img src="./images/arrow.svg" alt="" /></div>
             </div>
           </li>
           <li class="service">
@@ -70,12 +74,14 @@
             </div>
             <div class="info-service">
               <h3>name service</h3>
+
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
                 quibusdam, quas perspiciatis inventore nemo assumenda velit
                 delectus blanditiis provident dicta corporis!
               </p>
+              <div class="arrow"><img src="./images/arrow.svg" alt="" /></div>
             </div>
           </li>
           <li class="service">
@@ -87,29 +93,14 @@
             </div>
             <div class="info-service">
               <h3>name service</h3>
+
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
                 enim magnam eaque dolore! Quae voluptatibus neque deleniti est
                 quibusdam, quas perspiciatis inventore nemo assumenda velit
                 delectus blanditiis provident dicta corporis!
               </p>
-            </div>
-          </li>
-          <li class="service">
-            <div class="img-service">
-              <img
-                src="./images/desarrollo-web-albacete.png"
-                alt="img-service"
-              />
-            </div>
-            <div class="info-service">
-              <h3>name service</h3>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
-                enim magnam eaque dolore! Quae voluptatibus neque deleniti est
-                quibusdam, quas perspiciatis inventore nemo assumenda velit
-                delectus blanditiis provident dicta corporis!
-              </p>
+              <div class="arrow"><img src="./images/arrow.svg" alt="" /></div>
             </div>
           </li>
         </ul>
@@ -128,7 +119,7 @@
             </ul>
           </li>
           <li class="price-item price-item--best">
-            <h3>Title</h3>
+            <h3>Mantenimiento General</h3>
             <p>$00000</p>
             <ul>
               <li>description item</li>
@@ -149,10 +140,87 @@
           </li>
         </ul>
       </section>
+      <section class="questions">
+        <h2 class="title-section">¿Tienes dudas?</h2>
+
+        <p class="paragraph">
+          Si quieres saber acerca de como hacemos las cosas, acá te puedes
+          enterar
+        </p>
+
+        <article class="questions__padding">
+          <div class="questions__answer">
+            <h3 class="questions__title">
+              ¿Cuales materiales usamos?<span class="questions__arrow"
+                ><img
+                  src="./images/arrow.svg"
+                  alt="arrow"
+                  class="questions__img"
+              /></span>
+            </h3>
+
+            <p class="questions__show">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              similique corporis consequuntur maiores molestias quasi ratione
+              dolorum nihil in earum vel minus, culpa, quam eos eius sed
+              consequatur veritatis sapiente?
+            </p>
+          </div>
+        </article>
+        <article class="questions__padding">
+          <div class="questions__answer">
+            <h3 class="questions__title">
+              ¿Question?<span class="questions__arrow"
+                ><img
+                  src="./images/arrow.svg"
+                  alt="arrow"
+                  class="questions__img"
+              /></span>
+            </h3>
+
+            <p class="questions__show">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              similique corporis consequuntur maiores molestias quasi ratione
+              dolorum nihil in earum vel minus, culpa, quam eos eius sed
+              consequatur veritatis sapiente?
+            </p>
+          </div>
+        </article>
+        <article class="questions__padding">
+          <div class="questions__answer">
+            <h3 class="questions__title">
+              ¿Other question?<span class="questions__arrow"
+                ><img
+                  src="./images/arrow.svg"
+                  alt="arrow"
+                  class="questions__img"
+              /></span>
+            </h3>
+
+            <p class="questions__show">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              similique corporis consequuntur maiores molestias quasi ratione
+              dolorum nihil in earum vel minus, culpa, quam eos eius sed
+              consequatur veritatis sapiente?
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="invitation">
+        <h2 class="title-section">¿Que esperas? Vamos a dejar full esa bici</h2>
+        <p class="paragraph">
+          Ya que viste lo que hacemos ¿qué esperas para traer tu bici y dejarla
+          full para las rodadas?
+          <br />
+          Sólo dejame un mensaje y del resto me encargo yo
+          <span class="redirect-message"><a href="">Dejar mensaje</a></span>
+        </p>
+      </section>
     </main>
     <footer>
       footer
       <img src="./tile_background.png" alt="" />
     </footer>
+    <script src="./js/questions.js"></script>
   </body>
 </html>
