--- a/index.html
+++ b/index.html
@@ -218,8 +218,24 @@
       </section>
     </main>
     <footer>
-      footer
-      <img src="./tile_background.png" alt="" />
+      <ul class="list-footer">
+        <li class="list-item">
+          <img src="" alt="img" />
+          <h5>Celular</h5>
+        </li>
+        <li class="list-item">
+          <img src="" alt="img" />
+          <h5>Facebook</h5>
+        </li>
+        <li class="list-item">
+          <img src="" alt="img" />
+          <h5>Instagram</h5>
+        </li>
+        <li class="list-item">
+          <img src="" alt="img" />
+          <h5>Ubicación</h5>
+        </li>
+      </ul>
     </footer>
     <script src="./js/questions.js"></script>
   </body>
